<resources>
    <string name="app_name">比比招标</string>
    <string name="bottom_home">首页</string>
    <string name="str_main_media">超级评委</string>
    <string name="str_media_video_detail">视频详情</string>
    <string name="str_media_music_detail">音频详情</string>
    <string name="bottom_foucs">关注</string>
    <string name="string_my_collect">我的收藏</string>
    <string name="bottom_server">比比驿站</string>
    <string name="bottom_my">我的</string>
    <string name="companyInfo">企业资料</string>
    <string name="privateOdering">信息订阅</string>
    <string name="openMember">开通会员</string>
    <string name="adService">广告服务</string>
    <string name="memberService">会员服务</string>
    <string name="aboutOur">关于我们</string>
    <string name="serviceTerm">服务条款</string>
    <string name="legalStatement">法律声明</string>
    <string name="disclaimer">免责声明</string>
    <string name="str_setting">设置</string>
    <string name="str_login">登录</string>
    <string name="str_login_fast">快捷登录</string>
    <string name="str_register">注册</string>
    <string name="str_password_forget">忘记密码</string>
    <string name="str_password_new">新密码</string>
    <string name="str_magazine">招采杂志</string>
    <string name="str_write_tender_book">代写标书</string>
    <string name="str_tender_help">投标协助</string>
    <string name="str_history_record">历史记录</string>
    <string name="str_expert_ask">专家约谈</string>
    <string name="str_expert_ask_history">专家问答</string>
    <string name="str_custom_service">客服咨询</string>
    <string name="str_advice_submit">意见反馈</string>
    <string name="str_password_update">修改密码</string>
    <string name="str_company_info">企业资料</string>
    <string name="str_plat_form1">比比网</string>
    <string name="str_plat_form2">比比企业采购平台</string>
    <string name="str_plat_form3">比比金融服务平台</string>
    <string name="str_plat_form4">比比服务中心</string>
    <string name="str_banner1">个性化信息定制</string>
    <string name="str_banner2">比比网络服务中心</string>
    <string name="str_banner3">全网最热门项目聚合站</string>
    <string name="str_banner4">比比学院</string>
    <string name="str_message">资讯信息</string>
    <string name="str_message_detail">资讯详情</string>
    <string name="projectInfo">项目信息</string>
    <string name="projecNameOne">拟在建项目</string>
    <string name="projecNameTwo">业主委托项目</string>
    <string name="projecNameThree">PPP项目</string>
    <string name="projecLocation">位置</string>
    <string name="tenderInfo">招标信息</string>
    <string name="buyProjectInfo">采购信息</string>
    <string name="provideProjectInfo">供应商信息</string>
    <string name="coustmerService">客户服务</string>
    <string name="askLink">问答环节</string>
    <string name="cancel">取消</string>
    <string name="string_write_tender_book_hint">收到后我们会尽快与您联系，标书写好后将尽快发送至您的邮箱。您也可以登录“比比招标采购网”进行咨询服务。</string>
    <string name="string_tender_help_hint">收到后我们会尽快与您联系。您也可以直接电话联系客服。</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- 1，开发用 2，打正式包用 -->
    <string name="map_test_key">121e46a27061e2084e38b53e12b37a96</string>
    <string name="map_formal_key">aadf87cfabe77d291133ee19faaac722</string>
    <string name="map_zylGD_key">473a4eb3c7d06b286a89a9f74b5c04dc</string>

    <string name="string_search_hint">搜索项目/招标/采购信息等</string>

    <string name="string_private_info_design_max_hint">此项最多可选5项</string>
    <string name="str_bookmark">书签</string>
    <string name="str_bookmark_date_day">%1s天前</string>
    <string name="str_bookmark_date_hour">%1s小时前</string>
    <string name="str_bookmark_date_current">刚刚</string>
    <string name="str_bookmark_date_minute">%1s分钟前</string>

    <string name="str_search_result">搜索结果</string>

    //直播美颜
    <string name="beauty_on">开启美颜</string>
    <string name="beauty_off">关闭美颜</string>
    <string name="beauty_white">美白</string>
    <string name="beauty_skin_smooth">磨皮</string>
    <string name="beauty_ruddy">红润</string>
    <string name="beauty_brightness">亮度</string>
    <string name="beauty_cheekpink">腮红</string>
    <string name="beauty_thinface">瘦脸</string>
    <string name="beauty_shortenface">收下巴</string>
    <string name="beauty_bigeye">大眼</string>

    //会员服务
    <string name="member_service">会员服务</string>
    <string name="member_service_zuanshi">钻石会员</string>
    <string name="member_service_baijin">白金会员</string>
    <string name="member_service_vip">VIP会员</string>
    <string name="member_service_biaozhun">标准会员</string>
    <string name="member_service_gaoji">高级会员</string>
    <string name="member_service_zuanshi_unsel">钻石</string>
    <string name="member_service_baijin_unsel">白金</string>
    <string name="member_service_vip_unsel">VIP</string>
    <string name="member_service_biaozhun_unsel">标准</string>
    <string name="member_service_gaoji_unsel">高级</string>
    <string name="member_service_zuanshi_money">56600元/年</string>
    <string name="member_service_baijin_money">26600元/年</string>
    <string name="member_service_vip_money">16600元/年</string>
    <string name="member_service_biaozhun_money">4600元/年</string>
    <string name="member_service_gaoji_money">8600元/年</string>


</resources>
