<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/fragementcontainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/linearbottom"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e1e1e1" />

    <LinearLayout
        android:id="@+id/linearbottom"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_alignParentBottom="true"
        android:background="#F4F4F4"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/bottomhome"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center">

            <ImageView
                android:id="@+id/home"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/select_main_home" />

            <TextView
                android:id="@+id/texthome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/home"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/bottom_home"
                android:textColor="@drawable/bottomtext_selector"
                android:textSize="10sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/act_main_media"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center">

            <ImageView
                android:id="@+id/act_main_media_img"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/select_main_media" />

            <TextView
                android:id="@+id/textmedia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/act_main_media_img"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/str_main_media"
                android:textColor="@drawable/bottomtext_selector"
                android:textSize="10sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bottomask"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center">

            <RelativeLayout
                android:id="@+id/imageask_out"
                android:layout_width="21dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">

                <ImageView
                    android:id="@+id/imageask"
                    android:layout_width="21dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/select_main_service" />

                <ImageView
                    android:id="@+id/imageask_new"
                    android:layout_width="6dp"
                    android:layout_height="6dp"
                    android:layout_alignParentRight="true"
                    android:src="@mipmap/xiaoxin_tishi"
                    android:visibility="gone" />
            </RelativeLayout>

            <TextView
                android:id="@+id/textserver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageask_out"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/bottom_server"
                android:textColor="@drawable/bottomtext_selector"
                android:textSize="10sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bottomy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center">

            <ImageView
                android:id="@+id/more"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/select_main_my" />

            <TextView
                android:id="@+id/textmy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/more"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/bottom_my"
                android:textColor="@drawable/bottomtext_selector"
                android:textSize="10sp" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
